# modrec-zoo

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  ZOO.md  complex_models.py  models.py  plotting.py  preprocessing.py  pyproject.toml  requirements.txt  scratch.ipynb  simulator.py  train.py
.claude/: settings.local.json
docs/: ZOO.md  csp-baseline4096-progress.md  csp-lessons-and-dl-roadmap.md  full-comparison-200k.md  full-comparison-400k.md
scripts/: basic-test.sh  compare_csp_iq_features.py  comprehensive-baseline.sh  convert_cspb_2018r2.py  csp-sweep.sh  gcp-setup.sh  gradient_snr_osr_breakdown.py  refresh-baselines.sh  spectrogram-high-snr-sweep.sh  spectrogram-rectangular-high-snr-sweep.sh  spectrogram-resnet-search.sh
src/modreczoo/: __init__.py  auxiliary.py  data.py  domain_shift.py  evaluation.py  features.py  oracle.py  plotting.py  preprocessing.py  reporting.py  simulation.py  training.py  transforms.py
src/modreczoo/cli/: __init__.py  domain_shift.py  plot_spectrograms.py  simulate.py  train.py
src/modreczoo/models/: __init__.py  advanced.py  baselines.py  cnn.py  complex.py  dilated.py  joint.py  mlp.py  multiscale.py  registry.py  resnet.py  streams.py  transformer.py  wrappers.py
tests/: test_auxiliary_preprocessing.py  test_convert_cspb_2018r2.py  test_domain_shift.py  test_evaluation_information.py  test_oracle.py  test_plotting.py  test_reporting.py  test_simulation.py
