[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modrec-zoo"
version = "0.1.0"
description = "Playground for deep learning algorithms applied to modulation recognition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "polars",
    "tqdm",
    "matplotlib",
    "torch",
    "mlflow",
    "scikit-learn",
    "nvidia-ml-py>=13.595.45",
    "jsonargparse",
]

[project.scripts]
modreczoo-simulate = "modreczoo.cli.simulate:main"
modreczoo-train = "modreczoo.cli.train:main"

[tool.hatch.build.targets.wheel]
packages = ["src/modreczoo"]

[dependency-groups]
dev = [
    "jupyterlab",
    "ipympl",
    "jupyter-collaboration>=4.3.0",
    "jupyter-mcp-tools>=0.1.6",
    "ipykernel>=7.2.0",
    "pycrdt>=0.12.50",
    "jupyter-mcp-server>=1.0.2",
]
