[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modrec-zoo"
version = "0.1.0"
description = "Playground for deep learning algorithms applied to modulation recognition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "polars",
    "tqdm",
    "matplotlib",
    "plotly",
    "torch",
    "mlflow",
    "scikit-learn",
    "psutil>=7.2.2",
    "nvidia-ml-py>=13.595.45",
    "jsonargparse",
    "anywidget>=0.11.0",
]

[project.scripts]
modreczoo-simulate = "modreczoo.cli.simulate:main"
modreczoo-train = "modreczoo.cli.train:main"
modreczoo-plot-spectrograms = "modreczoo.cli.plot_spectrograms:main"

[tool.hatch.build.targets.wheel]
packages = ["src/modreczoo"]

[dependency-groups]
dev = [
    "jupyterlab",
    "ipympl",
    "jupyter-collaboration>=4.3.0",
    "jupyter-mcp-tools>=0.1.6",
    "ipykernel>=7.2.0",
    "pycrdt>=0.12.50",
    "jupyter-mcp-server>=1.0.2",
    "basedpyright>=1.39.3",
]
